--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@sangria/core",
   "version": "1.0.0",
-  "description": "Middleware utilities",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "private":"false",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Edweis/sangria.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Edweis/sangria/issues"
+  },
+  "homepage": "https://github.com/Edweis/sangria#readme"
 }
