--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@sangria/core",
+  "name": "@pantone/sangria",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private":"false",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Edweis/sangria.git"
