--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "CI=1 vitest"
+    "test": "CI=1 vitest",
+    "build": "del-cli dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
     "np": "^7.6.3"
   },
   "devDependencies": {
+    "del-cli": "^5.0.0",
+    "typescript": "^4.9.5",
     "vitest": "^0.29.2"
   }
 }
