--- a/package.json
+++ b/package.json
@@ -1,30 +1,15 @@
 {
-  "name": "@pantone/sangria",
-  "version": "1.0.1",
+  "name": "pantone",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "CI=1 vitest",
-    "build": "del-cli dist && tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Edweis/sangria.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Edweis/sangria/issues"
-  },
-  "homepage": "https://github.com/Edweis/sangria#readme",
-  "dependencies": {
-    "lodash-es": "^4.17.21",
-    "nanoid": "^4.0.1",
-    "np": "^7.6.3"
-  },
   "devDependencies": {
-    "del-cli": "^5.0.0",
-    "typescript": "^4.9.5",
     "vitest": "^0.29.2"
   }
 }
