--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,9 @@
     "nanoid": "^4.0.1",
     "p-map": "^5.5.0"
   },
+  "files": [
+    "src"
+  ],
   "devDependencies": { 
     "del-cli": "^5.0.0",
     "type-fest": "^3.6.1",
