--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitest/coverage-c8": "^0.29.2",
     "vitest": "^0.29.2"
   }
 }
