--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "CI=1 vitest",
+    "test": "vitest run --coverage", 
     "build": "del-cli dist && tsc"
   },
   "repository": {
