--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "pnpm test -r"
+    "test": "pnpm test -r",
+    "lint": "xo"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@vitest/coverage-c8": "^0.29.2",
-    "vitest": "^0.29.2"
+    "del-cli": "^5.0.0",
+    "type-fest": "^3.6.1",
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.2",
+    "xo": "^0.53.1"
   }
 }
