--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "pnpm test -r",
-    "lint": "xo"
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "@vitest/coverage-c8": "^0.29.2",
     "del-cli": "^5.0.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
+    "prettier": "^2.8.4",
     "type-fest": "^3.6.1",
     "typescript": "^4.9.5",
-    "vitest": "^0.29.2",
-    "xo": "^0.53.1"
+    "vitest": "^0.29.2"
   }
 }
